--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "@slack/bolt": "^2.2.3",
-    "dotenv": "^8.2.0"
+    "@slack/events-api": "^2.3.4",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.0"
   }
 }
